--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "it-logger",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.13.4",
+    "node": "12.16.1"
+  },
   "dependencies": {
     "materialize-css": "^1.0.0",
     "moment": "^2.24.0",
