--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "it-logger",
+  "name": "hiking-spots",
   "version": "0.1.0",
   "private": true,
   "engines": {
@@ -25,7 +25,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm- install --prefix client && npm run build --prefix client "
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
